# data-collect-and-deploy

./: README.md
arx/collect/: collect.py  config.yaml  process_gripper.py  read_hdf5_all.py  replay.py
arx/deploy/: act_infer.py  hrdt_test_11108.py  pi0_infer_cvpr.py  readme.md
arx/deploy/scripts/: act_run.sh  can.sh  mip_hrdt_server.sh  pi0_run.sh
arx/deploy/utils/: client.py  controller.py  model_inference copy.py  ros_operator.py  setup_loader.py
data_collect_arx/: command.sh  readme.md  transport.py
data_collect_arx/00-readme/: readme
data_collect_arx/00-sh/ROS/: 01make.sh  02make.sh  03single_vr.sh  04single_arm.sh  05double_vr.sh  06_single_keyboard.sh
data_collect_arx/00-sh/ROS2/: 01make.sh  02make.sh  03single_vr.sh  04single_arm.sh  05double_vr.sh
data_collect_arx/ARX_CAN/: arx_can copy.rules  arx_can.rules  can.sh
data_collect_arx/ARX_CAN/arx_can/: arx_can0.sh  arx_can1.sh  arx_can2.sh  arx_can3.sh  arx_can5.sh
data_collect_arx/ARX_VR/: LICENSE.txt  Quest3_APK_Install.md  VR软件操作.md  熟悉Quest3.md
data_collect_arx/ARX_VR_SDK/: readme.md
data_collect_arx/ARX_VR_SDK/ROS/: ARX_VR.sh  port.sh  认识VR.md
data_collect_arx/ARX_VR_SDK/ROS/src/pos_cmd_msg/: CMakeLists.txt  package.xml
data_collect_arx/ARX_VR_SDK/ROS/src/pos_cmd_msg/msg/: PosCmd.msg
data_collect_arx/ARX_VR_SDK/ROS/src/serial_port/: CMakeLists.txt  package.xml
data_collect_arx/ARX_VR_SDK/ROS/src/serial_port/src/: serial_port.cpp
data_collect_arx/ARX_VR_SDK/ROS2/: ARX_VR.sh  port.sh
data_collect_arx/ARX_VR_SDK/ROS2/src/serial_port/: CMakeLists.txt  package.xml
data_collect_arx/ARX_VR_SDK/ROS2/src/serial_port/include/serial_port/: serial_port.hpp
data_collect_arx/ARX_VR_SDK/ROS2/src/serial_port/lib/vr_serial/include/vr_serial/: serial_parser.hpp
data_collect_arx/ARX_VR_SDK/ROS2/src/serial_port/src/: serial_port.cpp
data_collect_arx/ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/: CMakeLists.txt  package.xml
data_collect_arx/ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/include/arx_x5_controller/: KeyBoard.hpp  X5Controller.hpp
data_collect_arx/ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/launch/: open_double_arm.launch  open_keyboard_control.launch  open_remote_master.launch  open_remote_slave.launch  open_single_arm.launch  open_vr_double_arm.launch  open_vr_single_arm.launch  torque_control_catch.launch
data_collect_arx/ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/lib/arx_hardware_interface/include/arx_hardware_interface/typedef/: HybridJointTypeDef.hpp
data_collect_arx/ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/lib/arx_x5_src/include/arx_x5_src/interfaces/: InterfaceToolsPy.hpp  InterfacesPy.hpp
data_collect_arx/ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/src/: KeyBoard.cpp  X5Controller.cpp
data_collect_arx/ROS/X5_ws/src/arx_msg_ros/arm_control/: CMakeLists.txt  package.xml
data_collect_arx/ROS/X5_ws/src/arx_msg_ros/arm_control/msg/: PosCmd.msg
data_collect_arx/ROS/X5_ws/src/arx_msg_ros/arx5_arm_msg/: CMakeLists.txt  package.xml
data_collect_arx/ROS/X5_ws/src/arx_msg_ros/arx5_arm_msg/msg/: RobotStatus.msg
data_collect_arx/ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/: CMakeLists.txt  x5.urdf  x5_master.urdf
data_collect_arx/ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/config/: remote_slave.yaml  single_arm.yaml  vr_single_arm.yaml
data_collect_arx/ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/include/arx_x5_controller/: KeyBoard.hpp  X5Controller.hpp
data_collect_arx/ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/include/arx_x5_controller/visualization/: visualization.hpp
data_collect_arx/ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/launch/: open_remote_slave.launch.py  open_single_arm.launch.py  open_vr_single_arm.launch.py  torque_control_catch.launch.py
data_collect_arx/ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/lib/arx_x5_src/include/arx_x5_src/interfaces/: InterfaceTools.hpp
data_collect_arx/ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/src/: KeyBoard.cpp  X5Controller.cpp
data_collect_arx/ROS2/X5_ws/src/arxmsgros2/arm_control/: CMakeLists.txt
data_collect_arx/ROS2/X5_ws/src/arxmsgros2/arx5_arm_msg/: CMakeLists.txt  package.xml
data_collect_arx/ROS2/X5_ws/src/arxmsgros2/arx5_arm_msg/msg/: RobotCmd.msg  RobotStatus.msg
data_collect_arx/inference/: dog.py  free.py  hrdt.sh  hrdt_infer.py  pi0_infer.py  prompt.txt
data_collect_arx/inference/backup/: inference copy.py  inference_hrdt.py
data_collect_arx/inference/scripts/: arx.sh  hrdt_run.sh  (+3 more)
data_collect_arx/main/: calc_stat.py  collect_noop.py  config_single.yaml  rename.py  replay_smooth.py  set_init.py
data_collect_arx/py/arx_x5_python/bimanual/: CMakeLists.txt  __init__.py  build.sh
data_collect_arx/py/arx_x5_python/bimanual/api/arx_x5_src/include/arx_x5_src/interfaces/: InterfacesThread.hpp
data_collect_arx/py/arx_x5_python/bimanual/script/: dual_arm.py  single_arm.py
data_collect_arx/py/arx_x5_python/bimanual/src/: single_arm_interface.cpp
data_collect_arx/run/: BridgeControl zhouxuezhang.py  BridgeControl.backup  BridgeControl.py  CameraSave.py  TwoPosition.py  record copy.py  record.py  replay_joints.py
data_collect_piper/: DataCollect.md  Untitled-1.sh  modelscope_trans.py  send_message.py
data_collect_piper/arm_sys_control_web/: .swp  app.py  app_qx.py  ros_backend.py  ros_backend_qx.py
data_collect_piper/data_anno/: converting_utils.py  converting_utils_old.py  data_anno.py  data_anno_fix.py  log_filter.py  task.py
data_collect_piper/songlings/: control_robot_eef.py  converting_utils copy.py  converting_utils.py  data_collect.py  dataset_to_hdf5&mp4.py  get_eef_data.py  main.qml  piper_interface_v2.py  remote_service.py  replay_eef copy.py  replay_eef.py  test.py  utils.py  video_preprocess.py  visualize_traj.py
piper/collect/: readme.md
祖传脚本/: .gitignore  README.md  启动步骤Quick.md
祖传脚本/DataCollection/: DataAnno.md  DataCollect.md  README.md
祖传脚本/Deploy/: DeployDevice.md  DeployModel.md  DeploySystem.md  QuickStart.md  ROSInstruction.md  piper_ctrl_single_node.py  readme.md  step.txt  tmp.md
祖传脚本/Preliminary/: README.md  Server.md
(+381 files in other folders)
