<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arm_control</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="evencewu@outlook.com">evencewu</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rosmsg</depend>
    <depend>rospy</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
